fix: better visibility for selected ship

--- a/src/style.css
+++ b/src/style.css
@@ -20,7 +20,6 @@ body {
 
 .shipTable {
   display: grid;
-  grid-template-columns: 1fr 2rem;
   justify-items: center;
   border-radius: 10px;
   background-color: rgb(50, 50, 50);
@@ -30,12 +29,21 @@ body {
   font-weight: 900;
 }
 
-.shipTableCurrent.ti {
-  box-shadow: 0 0 10px 2px greenyellow;
+.shipTableCurrent.tiContainer {
+  border: 1px solid greenyellow;
   z-index: 2;
 }
 
+.tiContainer {
+  display: grid;
+  grid-template-columns: 1fr max-content;
+  width: 100%;
+  border-radius: 10px;
+  padding: 0 5px;
+}
+
 .ti {
+  border-radius: 10px;
   color: white;
   width: 100%;
   text-align: center;
@@ -49,9 +57,6 @@ body {
   grid-template-rows: repeat(10, 1fr);
   aspect-ratio: 1;
   padding: 10px;
-}
-
-.controls {
 }
 
 .active {
